# stm32g431cbu6

./: Cargo.toml  README.md  deploy.sh  memory.x
.cargo/: config.toml
assets/: rust.raw
src/: main.rs
