[package]
name = "stm32f401cdu6-rust"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = ["device"] }
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
features = ["stm32f401", "rt"]
version = "0.15.0"
