[package]
name = "stm32g431cbu6-rust"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = ["device"] }
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
micromath = "2.0.0"

embedded-hal = { version = "0.2.7", features = ["unproven"] }

fugit = "0.3.6"
display-interface = "0.4"
display-interface-spi = "0.4"
embedded-graphics = "0.7"
st7789 = { version = "0.6", features = ["batch"] }

stm32g4xx-hal = { git = "https://github.com/stm32-rs/stm32g4xx-hal.git", features = ["stm32g431", "rt"] }

